test/regtest/cases/errors/unresolved_symbol.kum
| disable_exec
алг нач
 вперед
кон